--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -1,19 +1,31 @@
-name: Black
-
-on: push
-
+name: PyLint
+on:
+  push:
+    paths:
+    - "**.py"
+  workflow_dispatch:
 jobs:
-  black:
+  PEP8:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-      - name: Install black
+      - uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10.x"
+      - name: Install libraries
+        run: pip install autopep8 autoflake isort black
+      - name: Check for showstoppers
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install -U black
-      - name: Run black
-        run: black .
+          autopep8 --verbose --in-place --recursive --aggressive *.py
+      - name: Remove unused imports
+        run: |
+          autoflake --in-place --recursive --remove-all-unused-imports --ignore-init-module-imports .
+
+      - name: lint with isort and black
+        run: |
+          isort .
+          black .
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
             commit_message: "Auto fixes"
