--- a/sample.env
+++ b/sample.env
@@ -1,9 +1,12 @@
 API_ID=
 API_HASH=
+AUTO_GCAST=True
+AUTO_GCAST_MSG=
 BOT_TOKEN=
+EXTRA_PLUGINS_REPO=https://github.com/THE-VIP-BOY-OP/VIP-MUSIC-PLUGIN
 LOGGER_ID=
 MONGO_DB_URI=
 OWNER_ID=
 STRING_SESSION=
-AUTO_GCAST_MSG=
-AUTO_GCAST=
+SUPPORT_CHAT=
+SUPPORT_CHANNEL=
