--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
-openai
 aiofiles
-aiohttp
-asyncio
+aiohttp==3.9.3
+asyncio==3.4.3
 beautifulsoup4
-dnspython
+dnspython==2.3.0
 ffmpeg-python
 gitpython
 hachoir
 heroku3
-httpx[http2]
+httpx==0.25.2
 lyricsgenius
-motor
+motor==3.3.2
 wget
 pillow==9.5.0
 psutil
@@ -19,7 +18,7 @@ pykeyboard
 py-tgcalls==1.2.9
 ntgcalls==1.1.2
 python-dotenv
-pyyaml
+pyyaml==6.0.1
 requests
 speedtest-cli
 spotipy
@@ -28,8 +27,39 @@ urllib3
 uvloop
 flask
 gunicorn==20.1.0
+opencv-python-headless==4.9.0.80
+telethon==1.33.1
+apscheduler
+bard
+pornhub-api==0.2.0
+blackpink
+deepai
+Faker
+pydub
+pycountry
+pyfiglet
+qrcode
+pytz
+future==0.18.3
+search_engine_parser
+pyshorteners
+pyrofork 
+phonenumbers
+emojis
+telegraph==2.2.0
+unidecode
+yt-dlp
+gtts
+youtube_search
+youtube-search-python
+lexica-api==1.4.7
+gpytranslate
+openai==0.28.0
+mpv
+moviepy
 git+https://github.com/KurimuzonAkuma/pyrogram@dev
+https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
 git+https://github.com/yt-dlp/yt-dlp
-git+https://github.com/alexmercerind/youtube-search-python@main
+git+https://github.com/AsmSafone/SafoneAPI
 git+https://github.com/joetats/youtube_search@master
-
+git+https://github.com/alexmercerind/youtube-search-python@main
